Fix: Resolve link text color change issue in dark mode

--- a/src/renderer/shared/styles/index.scss
+++ b/src/renderer/shared/styles/index.scss
@@ -19,6 +19,6 @@ body {
 }
 
 a {
-  color: inherit;
+  color: $color-100;
   text-decoration: none;
 }
